# Codam_raytracer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: camera.h  config.h  hooks.h  parse.h  ray.h  render.h
include/hittable/: array.h  hittable.h  sphere.h
include/render/: ambient.h  camera.h  color.h  hit_record.h  hittable.h  hittable_array.h  light.h  material.h  point_light.h  ray.h  render.h
include/render/hittables/: array.h  circle.h  cylinder.h  hittable.h  plane.h  sphere.h
lib/MLX42/: CMakeLists.txt
lib/get_next_line/: .gitignore  CMakeLists.txt  Makefile  get_next_line.c  get_next_line_int.h  get_next_line_utils.c
lib/get_next_line/include/: get_next_line.h
lib/libft/: .gitignore  CMakeLists.txt  Makefile
lib/libft/include/: libft.h
lib/libft/src/: ft_abs.c  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_dstrdup.c  ft_dstrfree.c  ft_dstrlen.c  ft_dstrtolst.c  ft_filename.c  ft_findchr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_lsttoarray.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_nrlen.c  ft_pow.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  (+26 more)
lib/vec3/: .gitignore  CMakeLists.txt
lib/vec3/cmake/: gtest.cmake
lib/vec3/include/: vec3.h
lib/vec3/src/: add.c  clamp.c  compare.c  cross.c  defines.c  divide.c  dot.c  lenght.c  lenght_squared.c  multiply.c  new.c  normalize.c  reflect.c  reverse.c  scalar.c  subtract.c  utils.c
lib/vec3/test/: CMakeLists.txt  advanced_calculations.cpp  basic_calculations.cpp  constructors.cpp
sample-configs/: b_day_boy.rt  big_one.rt  many_pillars.rt  sortofmolecule.rt  test.rt
src/: hooks.c  main.c
src/parsing/: check_file_args.c  check_filmset.c  check_objects.c  error_handling.c  parse_rt_test.sh  string_utilities.c
src/parsing/rt_test_files/: test1.rt  test10.rt  test2.rt  test3.rt  test4.rt  test5.rt  test6.rt  test7.rt  test8.rt  test9.rt
src/render/: ambient.c  camera.c  color.c  hit_record.c  light.c  material.c  point_light.c  point_light_array.c  ray.c  render.c  render_params.c  utils.c
src/render/hittable/: hittable.c  hittable_list.c  sphere.c
src/render/hittables/: circle.c  cone.c  cone_new.c  cylinder.c  hittable.c  hittable_array.c  pipe_hit.c  pipe_new.c  plane.c  sphere.c
test/: CMakeLists.txt  camera_test.cpp
